--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .cell {
   width: 22px;
   height: 22px;
-  border: #ADD8E6 1px solid;
+  border: #ADD8E6 0.5px solid;
   background-color: whitesmoke;
+  color: red;
 }
